# culturekit

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml  tests.yml
docs/: environment_setup.md  index.md  model_eval.md
examples/: cd_eval.ipynb
scripts/: release.sh
src/culturekit/: __init__.py  cli.py  dataset.py  evaluation.py  models.py  scoring.py
